--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
         }
         
         .message {
-            width: 50%;
+            width: 40%;
             border-radius: 10px;
             box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 38%);
             color: white;
@@ -51,6 +51,23 @@
             font-size: 20px;
             margin: 10px;
             clear: both;
+        }
+        
+        .center {
+            clear: both;
+            color: white;
+            text-align: center;
+            font-size: 18px;
+            letter-spacing: 1px;
+        }
+        
+        .center span {
+            color: black;
+        }
+        
+        .message span {
+            color: black;
+            font-weight: bold;
         }
         
         .left {
