--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,14 @@
             color: black !important;
         }
         
+        .stickyCon {
+            position: sticky;
+            top: 0px;
+            background-color: #ffffffe6;
+            z-index: 1;
+            padding: 20px 0;
+        }
+        
         .container {
             max-width: 90%;
             background-color: rgba(28, 57, 221, 0.295);
@@ -52,11 +60,12 @@
         
         .message {
             width: 90%;
-            border-radius: 10px;
+            border-radius: 20px;
             box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 38%);
             color: white;
             background-color: rgb(0, 183, 255);
             padding: 15px;
+            overflow-wrap: break-word;
             font-size: 20px;
             margin-bottom: 10px;
             margin-top: 10px;
@@ -73,6 +82,11 @@
             padding: 2px 0;
         }
         
+        .red {
+            letter-spacing: 1.1px;
+            color: red;
+        }
+        
         .center span {
             color: black;
         }
@@ -84,10 +98,14 @@
         
         .left {
             float: left;
+            border-top-left-radius: 0px !important;
+            border-left: 1px solid red;
         }
         
         .right {
             float: right;
+            border-top-right-radius: 0px !important;
+            border-right: red;
         }
         
         .send-container {
@@ -114,7 +132,7 @@
             cursor: pointer;
         }
         
-        input[type=text]:hover {
+        input[type=text]:focus {
             background-color: white;
         }
         
