--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@
             top: 0px;
             background-color: #ffffffe6;
             z-index: 1;
-            padding: 20px 0;
+            padding: 5px 0;
+            /* border: 1px solid black; */
         }
         
         .container {
@@ -59,7 +60,7 @@
         }
         
         .message {
-            width: 90%;
+            /* width: 90%; */
             border-radius: 20px;
             box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 38%);
             color: white;
@@ -99,13 +100,11 @@
         .left {
             float: left;
             border-top-left-radius: 0px !important;
-            border-left: 1px solid red;
         }
         
         .right {
             float: right;
             border-top-right-radius: 0px !important;
-            border-right: red;
         }
         
         .send-container {
